--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "homepage": "./",
   "dependencies": {
     "@babel/core": "7.6.0",
+    "@babel/plugin-transform-react-jsx": "^7.7.4",
+    "@babel/plugin-transform-react-jsx-self": "^7.7.4",
     "@svgr/webpack": "4.3.2",
     "@types/jest": "24.0.23",
     "@types/node": "12.12.12",
