--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@babel/plugin-transform-react-jsx": "^7.7.4",
     "@babel/plugin-transform-react-jsx-self": "^7.7.4",
     "@svgr/webpack": "4.3.2",
+    "@types/classnames": "^2.2.9",
     "@types/jest": "24.0.23",
     "@types/node": "12.12.12",
     "@types/react": "^16.9.13",
@@ -22,6 +23,7 @@
     "babel-preset-react-app": "^9.0.2",
     "camelcase": "^5.2.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
+    "classnames": "^2.2.6",
     "cordova-ios": "^5.0.1",
     "css-loader": "2.1.1",
     "dotenv": "6.2.0",
